--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ server.port=3004
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+#spring.datasource.password=${mysql_password}
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/UberReviewData?createDatabaseIfNotExist=true
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
