--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.3.0")
-    implementation 'org.mrstm:UberEntityService:0.0.8-SNAPSHOT'
+    implementation 'org.mrstm:UberEntityService:0.0.11-SNAPSHOT'
 
+    // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
+    implementation("org.springframework.kafka:spring-kafka:4.0.0-M2")
 }
 
 tasks.named('test') {
