--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${HEAVYDRIVER_KR_EC2}:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -24,4 +24,4 @@ spring.kafka.consumer.group-id=socket-group
 
 spring.data.redis.port=6379
 spring.data.redis.database=0
-spring.data.redis.host=localhost
+spring.data.redis.host=${HEAVYDRIVER_KR_EC2}
